# nonaterm

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FEATURE_CHECKLIST.md  LICENSE  README.md  RELEASE_SIGNING.md  UPDATE_SETUP.md  V1_V2_STATUS.md  build.bat  build.sh  eslint.config.js  index.html  install.ps1  install.sh  package-lock.json  package.json  perf-baseline.json  perf-report-test.json  perf-summary.json  playwright.config.ts  prd.md  progress.md  sdd.md  tdd.md  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts  vitest.perf.config.ts  vitest.stress.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
docs/: BUILDING.md  RELEASING.md  fix-plan.md  manual.md  theme-docs.md
e2e-native/: package-lock.json  package.json  wdio.conf.js
keys/: nonaterm  nonaterm.pub
playwright-report/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: perf_probe.rs
src-tauri/src/: crash.rs  fs_watcher.rs  git.rs  lib.rs  main.rs  perf.rs  templates.rs  templates_io.rs  vault.rs  window_registry.rs
src-tauri/src/commands/: config.rs  git.rs  keybind.rs  mod.rs  pty.rs  state.rs  system.rs  templates.rs  vault.rs  window.rs  workspace.rs
src-tauri/src/config/: mod.rs
src-tauri/src/keybind/: conflict.rs  mod.rs  store.rs
src-tauri/src/pty/: backpressure.rs  manager.rs  mod.rs  reader.rs  session.rs  shell_resolver.rs
src-tauri/src/state/: mod.rs  schema.rs
src-tauri/src/utils/: diagnostics.rs  mod.rs
src-tauri/src/workspace/: mod.rs
(+200 files in other folders)
